--- a/individual signup/National.html
+++ b/individual signup/National.html
@@ -128,7 +128,7 @@
                         <a href="Personal Info2.html">
                         <i class="fa-solid fa-arrow-left text-cyan-500 w-20"></i>
                         </a>
-                        <a href="#">
+                        <a href="NOK.html">
                             <i class="fa-solid fa-arrow-right text-cyan-500 w-20 ml-24"></i>
                         </a>
                     </form>
