--- a/individual signup/NOK.html
+++ b/individual signup/NOK.html
@@ -77,7 +77,7 @@
           
             <div class="grid md:grid-cols-2 gap-12">
                 <div class="space-y-8">
-                  <p class="text-cyan-500 text-2xl">Personal Information</p>
+                  <p class="text-cyan-500 text-2xl">Next Of Kin</p>
                     <form class="max-w-md mx-auto">
                         <div class="relative z-0 w-full mb-5 group ">
                             <input type="text" name="floating_name" id="floating_name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
@@ -96,18 +96,28 @@
                         <div class="relative z-0 w-full mb-5 group ">
                             <input type="text" name="floating_phone1" id="floating_phone1" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
                             <label for="floating_phone1" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">
-                              <i class="fa-solid fa-phone mr-2"></i> Phone One
+                              <i class="fa-solid fa-phone mr-2"></i> Phone Number
                             </label>
                         </div>
                         <br>
                         <div class="relative z-0 w-full mb-5 group ">
-                            <input type="password" name="floating_password" id="floating_password" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
-                            <label for="floating_phone1" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">
-                              <i class="fa-solid fa-phone mr-2"></i>  Phone Two
-                            </label>
-                        </div>
-                        <a href="Personal Info2.html">
-                        <i class="fa-solid fa-arrow-right text-cyan-500 w-20"></i>
+                          <input type="email" name="floating_email" id="floating_email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
+                          <label for="floating_email" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">
+                            <i class="fa-solid fa-envelope mr-2"></i>Email
+                          </label>
+                      </div>
+                      <br>
+                        <div class="relative z-0 w-full mb-5 group ">
+                          <input type="text" name="floating_address" id="floating_address" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
+                          <label for="floating_address" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">
+                            <i class="fa-solid fa-location-dot mr-2"></i> Address
+                          </label>
+                      </div>
+                      <a href="National.html">
+                        <i class="fa-solid fa-arrow-left text-cyan-500 w-20"></i>
+                        </a>
+                        <a href="Address info.html">
+                            <i class="fa-solid fa-arrow-right text-cyan-500 w-20 ml-24"></i>
                         </a>
                     </form>
                 </div>
