updaated signup and login

--- a/Signup.html
+++ b/Signup.html
@@ -100,9 +100,11 @@
                         </svg>
                         <h2 class="text-2xl font-medium text-gray-700">Organization</h2>
                     </div>
+                    <a href="./organization signup/Organization Info1.html">
                     <button class="w-full py-3 px-4 bg-cyan-500 text-white rounded hover:bg-cyan-600 transition">
                         Sign up as an Organization
                     </button>
+                    </a>
                 </div>
             </div>
 
