--- a/Login.html
+++ b/Login.html
@@ -65,7 +65,7 @@
             </div>
           </nav>
           
-          <a href="Signup.html">
+          <a href="./organization signup/organization info1.html">
           <button class="border-2 border-cyan-600 border-solid hover:bg-cyan-600 text-white px-4 py-2 rounded-md text-sm font-medium hidden md:block mr-8">
             Sign up
           </button>
@@ -77,12 +77,12 @@
             <h2 class="text-center text-4xl text-gray-900">Log in to GitCash</h2>
             <form class="max-w-md mx-auto">
                 <div class="relative z-0 w-full mb-5 group ">
-                    <input type="email" name="floating_email" id="floating_email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
-                    <label for="floating_email" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">Email address</label>
+                    <input type="email" name="floating_email" id="floating_email" class="block py-4 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
+                    <label for="floating_email" class="px-4:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">Email address</label>
                 </div>
                 <br>
                 <div class="relative z-0 w-full mb-5 group ">
-                    <input type="password" name="floating_password" id="floating_password" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
+                    <input type="password" name="floating_password" id="floating_password" class="block py-4 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-cyan-600 peer" placeholder=" " required />
                     <label for="floating_password" class="peer-focus:font-medium absolute text-xl text-gray-900 duration-300 transform -translate-y-10 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-cyan-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-10">Password</label>
                 </div>
                 <label class="inline-flex items-center mt-7 cursor-pointer">
@@ -91,7 +91,7 @@
                     <p class="ms-3 text-sm font-medium text-gray-900">Remember me</p>
                     <p class="text-gray-900 ml-24">No Account? <a href="Signup.html" class="text-cyan-500">  Signup</a></p>
                 </label>
-                <button type="submit" class="text-white bg-cyan-700 hover:bg-cyan-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center mt-5">Login</button>
+                <button type="submit" class="text-white bg-cyan-700 hover:bg-cyan-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full px-5 py-4 text-center mt-5">Login</button>
             </form>
         </div>
     </div>
